Workaround for night mode incompatibility with LESS mixins
These LESS mixins alter color which creates an issue with CSS-variable
based color themes.

If we can hardcode these for now, we can revisit the solution later.

Bug: T357740
Change-Id: Iadc758bf7a9caf05975ec224a2161d4ad5925a87

--- a/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
@@ -18,7 +18,10 @@
 
 	&-suggested-edits {
 		border: @border-width-base @border-style-base @border-color-transparent;
-		background-color: fade( @background-color-progressive-subtle, 50% );
+		// equivalent to fade( @background-color-progressive-subtle, 50%)
+		// The LESS mixin is used with a hardcoded value for now due to incompatbility with
+		// skins that use CSS variables (T357740).
+		background-color: fade( #eaf3ff, 50% );
 	}
 
 	&-text {
