--- a/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
@@ -5,7 +5,8 @@
 
 .mw-ge-help-panel-postedit-main {
 	padding: 16px;
-	background-color: fade( @background-color-progressive-subtle, 50% );
+	// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
+	background-color: fade( #eaf3ff, 50% );
 
 	.mw-ge-help-panel-postedit-subheader2 {
 		color: @color-base;
@@ -22,7 +23,8 @@
 }
 
 .mw-ge-help-panel-postedit-trynewtask-footer {
-	background-color: fade( @background-color-progressive-subtle, 50% );
+	// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
+	background-color: fade( #eaf3ff, 50% );
 	text-align: right;
 	padding: 0 16px;
 }
