--- a/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
@@ -2,7 +2,8 @@
 @import 'mediawiki.skin.variables.less';
 @import '../utils/variables.less';
 
-@startediting-suggested-edits-background: fade( @background-color-progressive-subtle, 50% );
+// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
+@startediting-suggested-edits-background: fade( #eaf3ff, 50% );
 
 // Styles for the mobile summary view of StartEditing module for variant D users.
 .growthexperiments-homepage-module-start-startediting {
