--- a/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
+++ b/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
@@ -3,7 +3,8 @@
 
 .mw-ge-inviteToSuggestedEditsDrawer {
 	.mw-ge-collapsibleDrawer-content {
-		background-color: tint( @background-color-progressive-subtle, 50% );
+		// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
+		background-color: tint( #eaf3ff, 50% );
 	}
 
 	.oo-ui-panelLayout {
