Enable dark mode via skin invert for Special:Homepage
Short term fix for this page, so it doesn't look out of place in dark mode.
The page does have accessibility issues in both the light and dark theme,
so these still need to be addressed at some future point, but this is
an improvement on the status quo.

Bug: T357699
Change-Id: I6d9c6b6c07ff8c1bc0857fbb1192efbe76c51f69

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -245,3 +245,20 @@ body.mw-special-Homepage {
 		}
 	}
 }
+
+// Tweaks for dark support support (T357699).
+// FIXME: This should be removed when there is capacity for updating the extension
+// to use Codex design tokens.
+html.skin-theme-clientpref-night {
+	img {
+		filter: invert( 1 );
+	}
+}
+
+@media ( prefers-color-scheme: dark ) {
+	html.skin-theme-clientpref-os {
+		img {
+			filter: invert( 1 );
+		}
+	}
+}
