Improve dark mode on Growth homepage
* Don't invert images
* Invert the getting started difficulty dialog
so text is readable.
* Invert topic filters dialog

Follow up to I6d9c6b6c07ff8c1bc0857fbb1192efbe76c51f69

Bug: T357699
Change-Id: I29db81b29f985b2a33efa196de211812ecf86254

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -250,15 +250,25 @@ body.mw-special-Homepage {
 // FIXME: This should be removed when there is capacity for updating the extension
 // to use Codex design tokens.
 html.skin-theme-clientpref-night {
-	img {
+	.mw-no-invert,
+	.mw-body-content img {
 		filter: invert( 1 );
+	}
+
+	.cdx-no-invert {
+		filter: none;
 	}
 }
 
 @media ( prefers-color-scheme: dark ) {
 	html.skin-theme-clientpref-os {
-		img {
-			filter: invert( 1 );
+		.mw-no-invert,
+		.mw-body-content img {
+			filter: invert( 1 ) hue-rotate( 180deg );
+		}
+
+		.cdx-no-invert {
+			filter: none;
 		}
 	}
 }
