Rotate hue of images
This is applying to automatic mode, but not dark mode.

Follow up to I29db81b29f985b2a33efa196de211812ecf86254

Bug: T357699
Change-Id: I3c8be4607e2ceceaf301275855b457e8a171eb50

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -252,7 +252,7 @@ body.mw-special-Homepage {
 html.skin-theme-clientpref-night {
 	.mw-no-invert,
 	.mw-body-content img {
-		filter: invert( 1 );
+		filter: invert( 1 ) hue-rotate( 180deg );
 	}
 
 	.cdx-no-invert {
