Use codex design tokens rather than hardcoded values for MentorDashboard
Bug: T366376
Change-Id: I33708d115955701f37394e7d0778627b2d442174

--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -17,7 +17,7 @@
 @startEditingDialogSidePadding: 16px;
 @activeAnnotationBackgroundColor: @suggestedEditsOpaqueBackgroundColor;
 
-@background-color-growth-subtle: #f8f9fa;
+@background-color-growth-subtle: @background-color-neutral-subtle;
 @background-color-growth-apparent: #eaecf0;
 @background-color-growth-step-progress-dot: #c8ccd1;
 
