Homepage: show no-results icon in mobile no structured tasks preview
Bug: T368750
Change-Id: I59fe2c406e06e46de296323a0148866978052ae7

--- a/modules/ext.growthExperiments.Homepage.styles/MobileNoTasksWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MobileNoTasksWidget.less
@@ -8,9 +8,11 @@
 
 	&__icon {
 		width: 64px;
+		min-height: 64px;
 		// Image URLs are relative to the current CSS
-		background-image: url( ../../images/suggestededits/Topic-general-64w.svg );
+		background-image: url( ../../images/no-results.svg );
 		background-repeat: no-repeat;
+		background-size: 64px 64px;
 		padding-right: 16px;
 	}
 
