CommunityUpdates: add call to action button
This change implements a configurable call-to-action button for the
Community Updates module on the Newcomer homepage. It allows
wiki communities to customize both the destination page and the
button text. Restricted to internal wiki links.

Bug: T365880
Bug: T370376
Change-Id: Ia0894fc8d0e3d08b46249ca8d7285c69cf3f7f58

--- a/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
+++ b/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
@@ -28,6 +28,16 @@
 		}
 	}
 
+	.ext-growthExperiments-CommunityUpdates__CallToAction__link {
+		.cdx-mixin-link-base();
+		font-weight: @font-weight-bold;
+
+		&:visited,
+		&:visited:hover {
+			color: @color-progressive;
+		}
+	}
+
 	.cdx-card__text__description {
 		margin-bottom: @spacing-50;
 	}
