--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -249,18 +249,20 @@ body.mw-special-Homepage {
 // Tweaks for dark support support (T357699).
 // FIXME: This should be removed when there is capacity for updating the extension
 // to use Codex design tokens.
-html.skin-theme-clientpref-night {
-	.mw-no-invert,
-	.mw-body-content img {
-		filter: invert( 1 ) hue-rotate( 180deg );
-	}
+@media screen {
+	html.skin-theme-clientpref-night {
+		.mw-no-invert,
+		.mw-body-content img {
+			filter: invert( 1 ) hue-rotate( 180deg );
+		}
 
-	.cdx-no-invert {
-		filter: none;
+		.cdx-no-invert {
+			filter: none;
+		}
 	}
 }
 
-@media ( prefers-color-scheme: dark ) {
+@media screen and ( prefers-color-scheme: dark ) {
 	html.skin-theme-clientpref-os {
 		.mw-no-invert,
 		.mw-body-content img {
