Prepare Less styles for math=parens-division
Bug: T368921
Change-Id: I1fde2eab3bdec41cfb6e8b8433fd3f884b2809c7

--- a/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.skin.variables.less';
 
 // Copy of the @font-size-fieldset-header rule from OOUI.
-@font-size-fieldset-header: 16 / 16 / 0.875 / 1em;
+@font-size-fieldset-header: (16 / 16 / 0.875 / 1em);
 
 .mw-ge-help-panel-home-button {
 	min-height: 80px;
