--- a/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
@@ -23,7 +23,7 @@
 		color: @color-base;
 		margin-top: 0;
 		margin-bottom: 0;
-		padding-bottom: 1 / 1.05em;
+		padding-bottom: (1 / 1.05em);
 		border-bottom: unset;
 		display: flex;
 		flex-direction: row;
