--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -191,11 +191,11 @@
 		&-description {
 			.text-ellipsis();
 			line-height: 1.4;
-			font-size: 13/14 * 1em;
+			font-size: (13/14 * 1em);
 		}
 
 		&-container {
-			font-size: 12.4/14 * 1em;
+			font-size: (12.4/14 * 1em);
 		}
 
 		&-footer {
@@ -207,8 +207,8 @@
 				padding: 11px 20px 13px;
 
 				.oo-ui-labelElement-label {
-					line-height: 16/14 * 1em;
-					font-size: 14/14 * 1em;
+					line-height: (16/14 * 1em);
+					font-size: (14/14 * 1em);
 				}
 			}
 		}
@@ -226,7 +226,7 @@
 
 		&-description {
 			.text-ellipsis();
-			font-size: 13/16 * 1em;
+			font-size: (13/16 * 1em);
 		}
 
 		&-container {
@@ -239,7 +239,7 @@
 		}
 
 		&-tasktype {
-			font-size: 13/16 * 1em;
+			font-size: (13/16 * 1em);
 		}
 	}
 }
