--- a/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditDrawer.less
@@ -24,8 +24,8 @@
 				padding: 11px 20px 13px;
 
 				.oo-ui-labelElement-label {
-					line-height: 16/14 * 1em;
-					font-size: 14/14 * 1em;
+					line-height: (16/14 * 1em);
+					font-size: (14/14 * 1em);
 				}
 			}
 		}
