--- a/modules/ui-components/HelpPanelButton.less
+++ b/modules/ui-components/HelpPanelButton.less
@@ -22,9 +22,9 @@
 		.oo-ui-iconElement-icon,
 		.oo-ui-indicatorElement-indicator {
 			left: 50%;
-			margin-left: -10/14em;
+			margin-left: (-10/14em);
 			right: unset;
-			width: 20/14em;
+			width: (20/14em);
 			opacity: @opacity-base;
 			transition: transform @help-panel-transition-duration, opacity @help-panel-transition-duration;
 		}
