--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -21,7 +21,7 @@
 @background-color-growth-apparent: #eaecf0;
 @background-color-growth-step-progress-dot: #c8ccd1;
 
-@headerFontSize: 16/14em;
+@headerFontSize: (16/14em);
 
 // When updating this, also update HelpPanelProcessDialog.prototype.getTeardownProcess
 @help-panel-transition-duration: 400ms;
