build: Updating dependencies
composer:
* mediawiki/minus-x: 1.1.1 → 1.1.3
* php-parallel-lint/php-parallel-lint: 1.3.2 → 1.4.0

npm:
* grunt-banana-checker: 0.11.1 → 0.13.0
* grunt-eslint: 24.0.1 → 24.3.0
* grunt-stylelint: 0.18.0 → 0.20.1
* stylelint-config-wikimedia: 0.14.0 → 0.17.2
  The following rules are failing and were disabled:
  * @stylistic/declaration-colon-space-after
  * @stylistic/indentation
  The following rules no longer exist and were removed:
  * function-comma-newline-after
  * function-comma-space-after
  * function-parentheses-newline-inside
  * function-parentheses-space-inside
* wdio-mediawiki: 2.1.0 → 2.5.0

Additional changes:
* Re-generated the NPM lock file.

Change-Id: I1529c9a71abc69a86be3216762be37adcf2f7287

--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -102,15 +102,13 @@
 	// when the pending effect is being shown
 	.oo-ui-window-head:not( .oo-ui-pendingElement-pending ) {
 		body.ltr & {
-			// stylelint-disable-next-line value-list-comma-newline-after
-			background: linear-gradient( @headBgColor, @headBgColor ) 200% ~'/' 50% 100% no-repeat,
-				linear-gradient( @headBgColor, @headBgColor ) 300% ~'/' 50% 100% no-repeat;
+			background:
+ linear-gradient( @headBgColor, @headBgColor ) 200% ~'/' 50% 100% no-repeat,linear-gradient( @headBgColor, @headBgColor ) 300% ~'/' 50% 100% no-repeat;
 		}
 
 		body.rtl & {
-			// stylelint-disable-next-line value-list-comma-newline-after
-			background: linear-gradient( @headBgColor, @headBgColor ) -200% ~'/' 50% 100%  no-repeat,
-				linear-gradient( @headBgColor, @headBgColor ) -100% ~'/' 50% 100% no-repeat;
+			background:
+ linear-gradient( @headBgColor, @headBgColor ) -200% ~'/' 50% 100%  no-repeat,linear-gradient( @headBgColor, @headBgColor ) -100% ~'/' 50% 100% no-repeat;
 		}
 	}
 
@@ -121,9 +119,8 @@
 			// This rule is the same in LTR and RTL, but we need the extra selectors for specificity
 			body.ltr &:not( .oo-ui-pendingElement-pending ),
 			body.rtl &:not( .oo-ui-pendingElement-pending ) {
-				// stylelint-disable-next-line value-list-comma-newline-after
-				background: linear-gradient( @headBgColor, @headBgColor ) 0 ~'/' 50% 100% no-repeat,
-					linear-gradient( @headBgColor, @headBgColor ) 100% ~'/' 50% 100% no-repeat;
+				background:
+ linear-gradient( @headBgColor, @headBgColor ) 0 ~'/' 50% 100% no-repeat,linear-gradient( @headBgColor, @headBgColor ) 100% ~'/' 50% 100% no-repeat;
 			}
 		}
 	}
