--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -166,8 +166,7 @@ body.mw-special-Homepage {
 
 		.overlay-content {
 			flex-grow: 1;
-			overflow-x: hidden;
-			overflow-y: auto;
+			overflow: hidden auto;
 
 			.growthexperiments-homepage-module-suggested-edits {
 				background: none;
