--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -2,8 +2,8 @@
 @import './variables.less';
 
 // displays a grey rectangle with a running gradient
-/* stylelint-disable-next-line selector-list-comma-newline-after */
-.loading-animation ( @param-delay, @param-background-color: @background-color-growth-apparent ) {
+.loading-animation ( @param-delay,
+ @param-background-color: @background-color-growth-apparent ) {
 	animation: loading 2s ease infinite;
 	animation-delay: @param-delay;
 
