--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
@@ -6,8 +6,7 @@
 	&-headerRow {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
-		align-content: center;
+		place-content: center space-between;
 		padding: 0.5em 0;
 
 		&-select-all {
