--- a/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
+++ b/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
@@ -15,12 +15,24 @@
 
 		.cdx-card__thumbnail {
 			margin-right: 1em;
+			// Mobile size
+			width: 47px;
+			height: 47px;
+			overflow: hidden;
+
+			// Desktop size
+			@media ( min-width: @min-width-breakpoint-tablet ) {
+				width: 74px;
+				height: 74px;
+			}
 		}
 
 		.cdx-thumbnail__image.ext-growthExperiments-CommunityUpdates__thumbnail__image {
 			// stylelint-disable-next-line declaration-property-value-disallowed-list
 			border: none;
-			background-size: contain;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
 		}
 
 		.cdx-card__text__title {
