--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -266,13 +266,13 @@
 }
 
 .drawer.homepage-newimpact-discovery {
-	// Needed to provide a solid background to the 50% fade on suggested
+	// Needed to provide a solid background to the 50% transparent on suggested
 	// edits background color used with main drawer contents.
 	background-color: @background-color-base;
 	padding: 16px;
 
 	main {
-		background-color: fade( rgba( 234, 243, 255, 0.5 ), 50 );
+		background-color: @suggestedEditsBackgroundColorLegacyLightOnly;
 		padding: 16px;
 		margin: -16px;
 
