--- a/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
@@ -1,8 +1,7 @@
 @import 'mediawiki.skin.variables.less';
 @import '../utils/variables.less';
 
-// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
-@startediting-suggested-edits-background: fade( #eaf3ff, 50% );
+@startediting-suggested-edits-background: @suggestedEditsBackgroundColorLegacyLightOnly;
 
 // Styles for the mobile summary view of StartEditing module for variant D users.
 .growthexperiments-homepage-module-start-startediting {
