--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -142,7 +142,7 @@
 
 .suggested-edits-mobile-peek-content,
 .suggested-edits-panel-header {
-	background-color: fade( @suggestedEditsBackgroundColor, 50 );
+	background-color: @suggestedEditsBackgroundColorLegacyLightOnly;
 	display: flex;
 	justify-content: space-between;
 	// Restore Minerva's padding for the Drawer
