--- a/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
+++ b/modules/ext.growthExperiments.PostEdit/PostEditPanel.less
@@ -5,8 +5,7 @@
 
 .mw-ge-help-panel-postedit-main {
 	padding: 16px;
-	// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
-	background-color: fade( #eaf3ff, 50% );
+	background-color: @suggestedEditsBackgroundColorLegacyLightOnly;
 
 	.mw-ge-help-panel-postedit-subheader2 {
 		color: @color-base;
@@ -23,8 +22,7 @@
 }
 
 .mw-ge-help-panel-postedit-trynewtask-footer {
-	// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
-	background-color: fade( #eaf3ff, 50% );
+	background-color: @suggestedEditsBackgroundColorLegacyLightOnly;
 	text-align: right;
 	padding: 0 16px;
 }
