--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -13,6 +13,7 @@
 @hardBackgroundColor: #fee7e6;
 
 @suggestedEditsBackgroundColor: rgba( 234, 243, 255, 0.5 );
+@suggestedEditsBackgroundColorLegacyLightOnly: rgba( 234, 243, 255, 0.5 );
 @suggestedEditsOpaqueBackgroundColor: @background-color-interactive-subtle;
 @startEditingDialogSidePadding: 16px;
 @activeAnnotationBackgroundColor: @suggestedEditsOpaqueBackgroundColor;
