Show minimal surfacing popup on click on highlight
Bug: T376680
Change-Id: Iefe15abe67f15dcd2b13a398f1a313bc5f67fa8b

--- a/modules/ext.growthExperiments.StructuredTask.Surfacing/styles.less
+++ b/modules/ext.growthExperiments.StructuredTask.Surfacing/styles.less
@@ -16,3 +16,13 @@
 		.cdx-mixin-css-icon( @cdx-icon-link, @param-size-icon: @size-icon-x-small, @param-is-button-icon: true );
 	}
 }
+
+.growth-surfaced-task-popup-footer {
+	display: flex;
+	justify-content: flex-end;
+	gap: 4px;
+}
+
+.growth-surfaced-task-popup-title {
+	font-weight: bold;
+}
