SuggestedEdits: use Codex tokens for difficulty colors
Also introduce a text variable to facilitate the transition
to Codex tokens where the easyColor, mediumColor, hardColor
are replaced by border colors which cannot be applied to text
because they fail WCAG AA contrast tests.

Bug: T378592
Bug: T373434
Change-Id: I991ce2575cd842a0ef751bee14d7c379a610f157

--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
@@ -296,7 +296,7 @@
 			margin-bottom: 0.5em;
 
 			strong {
-				color: @easyColor;
+				color: @easyTextColor;
 				text-transform: lowercase;
 			}
 		}
@@ -352,15 +352,15 @@
 			}
 
 			&-easy &-label {
-				color: @easyColor;
+				color: @easyTextColor;
 			}
 
 			&-medium &-label {
-				color: @mediumColor;
+				color: @mediumTextColor;
 			}
 
 			&-hard &-label {
-				color: @hardColor;
+				color: @hardTextColor;
 			}
 
 			&-description {
