--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -149,15 +149,15 @@
 		overflow: hidden;
 
 		&-difficulty-easy {
-			color: @easyColor;
+			color: @easyTextColor;
 		}
 
 		&-difficulty-medium {
-			color: @mediumColor;
+			color: @mediumTextColor;
 		}
 
 		&-difficulty-hard {
-			color: @hardColor;
+			color: @hardTextColor;
 		}
 
 		&-taskname {
