--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -87,15 +87,15 @@
 	}
 
 	.suggested-edits-difficulty-indicator-easy {
-		.suggested-edits-difficulty-indicator-mixin( @easyBackgroundColor, @easyColor );
+		.suggested-edits-difficulty-indicator-mixin( @easyBackgroundColor, @easyBorderColor );
 	}
 
 	.suggested-edits-difficulty-indicator-medium {
-		.suggested-edits-difficulty-indicator-mixin( @mediumBackgroundColor, @mediumColor );
+		.suggested-edits-difficulty-indicator-mixin( @mediumBackgroundColor, @mediumBorderColor );
 	}
 
 	.suggested-edits-difficulty-indicator-hard {
-		.suggested-edits-difficulty-indicator-mixin( @hardBackgroundColor, @hardColor );
+		.suggested-edits-difficulty-indicator-mixin( @hardBackgroundColor, @hardBorderColor );
 	}
 }
 
