--- a/modules/utils/variables.less
+++ b/modules/utils/variables.less
@@ -5,12 +5,15 @@
 @homepageStartIconSize: 28px;
 @homepageLayoutNarrowBreakpoint: 992px;
 
-@easyColor: #14866d;
-@easyBackgroundColor: #d5fdf4;
-@mediumColor: #ac6600;
-@mediumBackgroundColor: #fef6e7;
-@hardColor: #b32424;
-@hardBackgroundColor: #fee7e6;
+@easyBorderColor: @border-color-success;
+@easyTextColor: @color-success;
+@easyBackgroundColor: @background-color-success-subtle;
+@mediumBorderColor: @border-color-warning;
+@mediumTextColor: @color-warning;
+@mediumBackgroundColor: @background-color-warning-subtle;
+@hardBorderColor: @border-color-error;
+@hardTextColor: @color-error;
+@hardBackgroundColor: @background-color-error-subtle;
 
 @background-color-progressive-subtle-50a: var(--background-color-progressive-subtle-50a, rgba( 234, 243, 255, 0.5 ));
 @suggestedEditsBackgroundColor: @background-color-progressive-subtle-50a;
