--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
@@ -23,15 +23,15 @@
 			// do that. For now just use "easy" as the first child stand-in since
 			// we know it's listed first.
 			padding-top: 0;
-			color: @easyColor;
+			color: @easyTextColor;
 		}
 
 		&-medium {
-			color: @mediumColor;
+			color: @mediumTextColor;
 		}
 
 		&-hard {
-			color: @hardColor;
+			color: @hardTextColor;
 		}
 
 		.oo-ui-icon-difficulty-easy,
