SuggestedEdits/StartEditing: remove temporary dark-mode hack
The interfaces nested in these two modules are using
Codex background, border and text color for most
of its parts and pass WCAG AA tests.

Bug: T378592
Bug: T373434
Change-Id: Ib893152534b05bba8ac7ad83308279b40d652780

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -507,14 +507,14 @@ body.mw-special-Homepage {
 							/* @noflip */
 							right: 0;
 							/* @noflip */
-							background: linear-gradient( to right, rgba( 255, 255, 255, 0 ), #fff 50% );
+							background: linear-gradient( to right, rgba( 255, 255, 255, 0 ), @background-color-base 50% );
 						}
 
 						&[ dir='rtl' ] .se-card-extract::after {
 							/* @noflip */
 							left: 0;
 							/* @noflip */
-							background: linear-gradient( to left, rgba( 255, 255, 255, 0 ), #fff 50% );
+							background: linear-gradient( to left, rgba( 255, 255, 255, 0 ), @background-color-base 50% );
 						}
 
 						.se-card-pageviews {
