SuggestedEdits/StartEditing: change custom background color to Codex token
Bug: T378592
Big: T373434
Change-Id: Idb2a73f9036fc6d39f5984ac1f2766189890753e

--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
@@ -113,8 +113,7 @@
 		margin-top: 18px;
 		font-size: 0.925em;
 		font-weight: bold;
-		// TODO: Replace with Codex token.
-		color: #b32424;
+		color: @color-error;
 	}
 
 	&-create-body {
