--- a/modules/ext.growthExperiments.StructuredTask.Surfacing/styles.less
+++ b/modules/ext.growthExperiments.StructuredTask.Surfacing/styles.less
@@ -1,28 +1,47 @@
 @import 'mediawiki.skin.variables.less';
 
-#mw-content-text .growth-surfaced-task-button {
-	padding: 0 5px;
-	background-color: #fef5e5;
-	border: 1px solid #fedd82;
-	font-weight: inherit;
-	min-height: inherit;
+#mw-content-text {
+	.growth-surfaced-task-button {
+		padding: 0 5px;
+		background-color: #fef5e5;
+		border: 1px solid #fedd82;
+		font-weight: inherit;
+		min-height: inherit;
 
-	&.growth-surfaced-task-popup-visible {
-		background-color: #f5f9ff;
-		border-color: #2252c2;
+		&.growth-surfaced-task-popup-visible {
+			background-color: #f5f9ff;
+			border-color: #2252c2;
+		}
+
+		&__icon {
+			.cdx-mixin-css-icon( @cdx-icon-link, @param-size-icon: @size-icon-x-small, @param-is-button-icon: true );
+		}
 	}
 
-	&__icon {
-		.cdx-mixin-css-icon( @cdx-icon-link, @param-size-icon: @size-icon-x-small, @param-is-button-icon: true );
+	.growth-surfaced-task-popup-footer {
+		display: flex;
+		justify-content: flex-end;
+		gap: 4px;
 	}
-}
 
-.growth-surfaced-task-popup-footer {
-	display: flex;
-	justify-content: flex-end;
-	gap: 4px;
-}
+	.growth-surfaced-task-popup-title {
+		font-weight: bold;
+	}
 
-.growth-surfaced-task-popup-title {
-	font-weight: bold;
+	.growth-surfaced-task-popup-content {
+		display: flex;
+		gap: 8px;
+
+		&-title {
+			font-weight: bold;
+		}
+
+		&-description {
+			font-size: 0.875em;
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+		}
+	}
 }
