Dark Mode: Suggested Edits & Structured Tasks
Update the post-edit dialog to display light text on a dark background.

Bug: T369588
Change-Id: I5e3ecfa197561100fb01b41d049bbedfcbf3f925

--- a/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
+++ b/modules/ext.growthExperiments.LevelingUp.InviteToSuggestedEdits/InviteToSuggestedEdits.less
@@ -4,7 +4,7 @@
 .mw-ge-inviteToSuggestedEditsDrawer {
 	.mw-ge-collapsibleDrawer-content {
 		// equivalent to @background-color-progressive-subtle. Hardcoded until T357740 is fixed.
-		background-color: tint( #eaf3ff, 50% );
+		background: @suggestedEditsOpaqueBackgroundColor;
 	}
 
 	.oo-ui-panelLayout {
