DarkMode: Fix "View image details" contrast issue
Bug: T369588
Change-Id: I2a42d33c3fd704254b5843b891f43367fe9aa35f

--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -43,7 +43,7 @@
 		left: 0;
 		right: 0;
 		padding: 8px;
-		color: @color-inverted;
+		color: @color-inverted-fixed;
 		background: rgba( 0, 0, 0, 0.5 );
 		display: flex;
 		align-items: center;
