DarkMode: Fix close button icon to be visible in dark mode
The close button icon in the recommended image viewer was not visible
in dark mode due to incorrect color inversion. This made it difficult
for users to exit the image viewer when using dark theme.

The fix adds a specific style override for dark mode that ensures
the close icon remains white and visible

Bug: T369588
Change-Id: If048dc842e787ae938277b3939457c103011aeda

--- a/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageViewer.less
@@ -5,11 +5,16 @@
 		text-align: right;
 	}
 
-	.mw-ge-recommendedImageViewer-image-close-button {
+	.mw-ge-recommendedImageViewer-image-close-button.oo-ui-widget.oo-ui-buttonElement.oo-ui-iconElement {
 		position: fixed;
 		top: 5px;
 		right: 8px;
 		opacity: @opacity-icon-base;
+
+		html.skin-theme-clientpref-night & .oo-ui-buttonElement-button .oo-ui-iconElement-icon.oo-ui-icon-close-shadow {
+			filter: none;
+			color: @background-color-base-fixed;
+		}
 	}
 
 	.oo-ui-window-body {
