fix(StructuredTask/addimage): update colors to fix contrast issues
Update the details button and caption placeholder colors
to meet contrast requirements

Follow-up: I2a42d33c3fd704254b5843b891f43367fe9aa35f
Bug: T369588
Change-Id: I69f21210a93d8d34c3d8009047eba9b3b63ecbe2

--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageCaptionNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageCaptionNode.less
@@ -17,7 +17,7 @@
 	}
 
 	.mw-ge-recommendedImageCaption-placeholder {
-		color: @color-placeholder;
+		color: @color-subtle;
 		pointer-events: none;
 	}
 
