--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -44,7 +44,9 @@
 		right: 0;
 		padding: 8px;
 		color: @color-inverted-fixed;
-		background: rgba( 0, 0, 0, 0.5 );
+		// FIXME: should use a Codex token, with opacity, similar to
+		// background-color-backdrop-dark but fixed, T367986
+		background: rgba( 0, 0, 0, 0.65 );
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
