fix(Homepage.styles): use Codex color for module background in mobile summary
Bug: T369588
Change-Id: Ifb900c1aa64e051d08a90cb1d9f61ca37956a47a

--- a/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
@@ -9,8 +9,7 @@
 		cursor: pointer;
 		border: @border-width-base @border-style-base @border-color-progressive;
 		border-radius: @border-radius-base;
-		// TODO: Why is this a non-Codex color?
-		background-color: #f5f9ff;
+		background-color: @suggestedEditsBackgroundColor;
 
 		.growthexperiments-homepage-module-header {
 			padding-top: 16px;
