--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -623,7 +623,7 @@ body.mw-special-Homepage {
 	}
 
 	&.growthexperiments-homepage-module-mobile-summary {
-		background-color: #f5f9ff;
+		background-color: @suggestedEditsBackgroundColor;
 	}
 
 	&.growthexperiments-homepage-module-mobile-overlay,
