--- a/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
+++ b/modules/ext.growthExperiments.Homepage.styles/CommunityUpdates.less
@@ -32,7 +32,7 @@
 			border: none;
 			width: 100%;
 			height: 100%;
-			object-fit: contain;
+			background-size: contain;
 		}
 
 		.cdx-card__text__title {
